--- a/css/style.css
+++ b/css/style.css
@@ -898,8 +898,9 @@ p.topuser-age {
         align-items: center;
         justify-content: center;
     }
-    .cards .slick-arrow {
-        display: none;
+    .cards .slick-next,
+    .cards .slick-prev {
+        visibility: hidden;
     }
     .place-block {
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
