--- a/css/style.css
+++ b/css/style.css
@@ -511,15 +511,155 @@ p.slide-info {
     font-weight: 400;
     margin-bottom: 30px;
 }
-.place-info span {
+.place-info span i {
     font-size: 18px;
     font-weight: 400;
     line-height: 25px;
+}
+
+.fa-map-marker-alt {
     text-decoration: underline;
 }
-.fa,
-.fas {
+.people-container {
+    display: flex;
+}
+.people-block {
+    width: 65%;
+}
+.people .buttons-search {
+    margin-top: 21px;
+    width: 100%;
+    display: flex;
+}
+.people .buttons-search input:nth-child(1) {
+    text-align: left;
+    padding-right: 27vw;
+    margin-right: 36px;
+    border-radius: 20px;
+    border: 1px solid #000;
+    line-height: 2em;
+    text-indent: 25px;
+}
+
+.people .buttons-search input:nth-child(2) {
+    line-height: 2em;
+    border-radius: 10px;
+    background-color: #5e3462;
+    color: #fff;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.8);
+    border: none;
+}
+.people-info {
+    display: flex;
+    border: 1px solid #000;
+    padding: 21px;
+    position: relative;
+    margin: 20px 0 0 0;
+}
+.people-text {
+    margin-left: 55px;
+}
+.people-text h4 {
+    font-size: 24px;
+    line-height: 32px;
     font-weight: 400;
+    margin-bottom: 0;
+}
+.people-text p {
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #5e3462;
+}
+.people-button {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+}
+.people-button span {
+    margin-right: 10px;
+}
+.btn-addfriend {
+    font-size: 18px;
+    line-height: 19px;
+    font-weight: 400;
+    text-align: center;
+    background-color: transparent;
+    border-radius: 100px;
+    border: 2px solid #000;
+    padding: 1% 5%;
+}
+.searchpeople-block {
+    width: 35%;
+    background: -webkit-linear-gradient(
+        180deg,
+        rgb(189, 155, 190),
+        rgb(190, 51, 138),
+        rgb(76, 93, 216)
+    );
+    background: -moz-linear-gradient(
+        180deg,
+        rgb(189, 155, 190),
+        rgb(190, 51, 138),
+        rgb(76, 93, 216)
+    );
+    background: linear-gradient(
+        180deg,
+        rgb(189, 155, 190),
+        rgb(190, 51, 138),
+        rgb(76, 93, 216)
+    );
+}
+.searchpeople-block h2 {
+    text-align: center;
+    margin-bottom: 2em;
+    margin-top: 30px;
+}
+.wide-search {
+    display: flex;
+    flex-direction: column;
+}
+.find-city,
+.find-gender {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20%;
+    font-size: 20px;
+    justify-content: center;
+    width: 50%;
+    margin-left: 25%;
+    text-align: center;
+}
+.find-city select,
+.find-gender select {
+    padding: 10px 20px;
+    background-color: rgb(160, 167, 221);
+}
+.find-age label {
+    display: flex;
+    flex-direction: row;
+    font-size: 20px;
+    justify-content: center;
+    width: 50%;
+    margin-left: 25%;
+    text-align: center;
+}
+.wide-search label > i {
+    padding-right: 10px;
+    padding-bottom: 20px;
+}
+
+.find-age input {
+    width: 10%;
+    margin-left: 10px;
+    border-radius: 10px;
+    text-align: center;
+    background-color: rgb(221, 223, 238);
+}
+.find-age span {
+    margin-left: 15%;
 }
 .all {
     width: 250px;
@@ -532,6 +672,14 @@ p.slide-info {
 }
 .buttons-search {
     display: flex;
+    margin-bottom: 30px;
+}
+.people-text {
+    display: flex;
+    flex-direction: column;
+}
+.searchpeople-block {
+    margin-left: 60px;
 }
 .steps h2 {
     margin-top: 55px;
@@ -917,7 +1065,7 @@ p.topuser-age {
         font-size: 18px;
         font-weight: 400;
     }
-    .places .fa,
+    .fa,
     .fas {
         font-weight: 400;
     }
