--- a/css/style.css
+++ b/css/style.css
@@ -530,25 +530,25 @@ p.slide-info {
     margin-top: 21px;
     width: 100%;
     display: flex;
+    margin-bottom: 30px;
 }
-.people .buttons-search input:nth-child(1) {
+.people .buttons-search input {
     text-align: left;
-    padding-right: 27vw;
     margin-right: 36px;
     border-radius: 20px;
     border: 1px solid #000;
     line-height: 2em;
     text-indent: 25px;
+    padding-right: 38vw;
+    max-width: 100%;
 }
 
-.people .buttons-search input:nth-child(2) {
-    line-height: 2em;
-    border-radius: 10px;
-    background-color: #5e3462;
-    color: #fff;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.8);
-    border: none;
+.people-text {
+    display: flex;
+    flex-direction: column;
+    margin-left: 55px;
 }
+
 .people-info {
     display: flex;
     border: 1px solid #000;
@@ -556,9 +556,7 @@ p.slide-info {
     position: relative;
     margin: 20px 0 0 0;
 }
-.people-text {
-    margin-left: 55px;
-}
+
 .people-text h4 {
     font-size: 24px;
     line-height: 32px;
@@ -589,9 +587,11 @@ p.slide-info {
     background-color: transparent;
     border-radius: 100px;
     border: 2px solid #000;
-    padding: 1% 5%;
+    padding: 1% 1%;
 }
+
 .searchpeople-block {
+    margin-left: 60px;
     width: 35%;
     background: -webkit-linear-gradient(
         180deg,
@@ -670,17 +670,7 @@ p.slide-info {
     margin-top: 52px;
     font-size: 15px;
 }
-.buttons-search {
-    display: flex;
-    margin-bottom: 30px;
-}
-.people-text {
-    display: flex;
-    flex-direction: column;
-}
-.searchpeople-block {
-    margin-left: 60px;
-}
+
 .steps h2 {
     margin-top: 55px;
     font-size: 40px;
@@ -1004,7 +994,7 @@ p.topuser-age {
     }
     .buttons-search {
         flex-direction: column;
-        margin-left: 4%;
+        margin-left: 5%;
     }
     .all {
         background: #fff;
@@ -1068,5 +1058,56 @@ p.topuser-age {
     .fa,
     .fas {
         font-weight: 400;
+    }
+    .searchpeople-block {
+        display: none;
+    }
+    .people-info {
+        display: flex;
+        border: none;
+        margin: 20px 0 0 0;
+        padding: 12px;
+    }
+    .people-text {
+        position: relative;
+        margin-left: 5%;
+        align-items: center;
+    }
+    .people-text h4 {
+        font-size: 20px;
+        line-height: 25px;
+        font-weight: 600;
+        margin-bottom: 0;
+    }
+    .people-text p {
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 400;
+        color: #5e3462;
+    }
+    .people-button {
+        display: flex;
+        flex-direction: row;
+        position: absolute;
+        left: 0px;
+        bottom: 0px;
+    }
+
+    .people-button span {
+        display: none;
+    }
+    .btn-addfriend {
+        font-size: 13px;
+        line-height: 15px;
+        font-weight: 400;
+        text-align: center;
+        background-color: transparent;
+        border-radius: 100px;
+        border: 2px solid #000;
+        padding: 1% 15%;
+    }
+    .people-button img {
+        height: 32px;
+        width: 32px;
     }
 }
