--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,7 @@ p.slide-info {
     border: 1px solid #000;
     line-height: 2em;
     text-indent: 35px;
-    padding-right: 38vw;
+    padding-right: 36vw;
     max-width: 100%;
     background-image: url("/img/search-icon.svg");
     background-repeat: no-repeat;
@@ -879,6 +879,102 @@ p.topuser-age {
     font-size: 17px;
     padding: 0 5%;
     line-height: 25px;
+}
+/*стили формы регистрации*/
+.popup-register {
+}
+.reg-h2 {
+    text-align: center;
+    color: #fff;
+    font-size: 30px;
+}
+.form-register {
+    flex-basis: 35vh;
+    padding: 3.5em;
+    background: #5c5c5c;
+    box-shadow: 0 0 2em rgba(0, 0, 0, 0.5);
+    border-radius: 3em;
+    opacity: 0.9;
+}
+.reg-input {
+    padding: 0 1em;
+    font-size: 15px;
+    background: #f4f4f4;
+    border: 1px solid #ccc;
+    border-width: 1px 1px 1px 5px;
+    border-radius: 0;
+}
+.reg-input:focus {
+    background: #fff;
+    box-shadow: inset 0.1em 0.1em 0.5em rgba(0, 0, 0, 0.2);
+    outline: 0;
+}
+
+.form-field {
+    margin-bottom: 0.5em;
+    display: flex;
+}
+
+.form-field label {
+    flex: 0 1 5em;
+    padding: 0.5em;
+    background: #fff;
+    border: 1px solid 0 #ccc;
+    font-size: 15px;
+    text-align: center;
+    text-shadow: 0 1px 0 #fff;
+    line-height: 1;
+    border-radius: 0.5em 0 0 0.5em;
+    margin-right: 5px;
+}
+.form-field input,
+select {
+    flex-grow: 1;
+    border-radius: 0 0.5em 0.5em 0;
+    padding-right: 10%;
+}
+
+.input-right input {
+    border-radius: 0 0.5em 0.5em 0;
+}
+
+.reg-pass {
+    border-radius: 0 0.5em 0.5em 0;
+}
+.submit-field {
+    flex-direction: row;
+    justify-content: center;
+}
+.form-register {
+    position: relative;
+}
+.popup__close__register {
+    position: absolute;
+    right: 30px;
+    top: 20px;
+    font-size: 25px;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+input[type="submit"] {
+    margin-top: 1em;
+    flex: 0 1 30%;
+    padding: 0.8em;
+    font-size: 1.2rem;
+    background: transparent;
+    border-radius: 1em;
+    border: 4px solid #fff;
+    transition: 0.3s;
+    cursor: pointer;
+    color: #fff;
+}
+input[type="submit"]:hover {
+    color: #000;
+    background: #fff;
+}
+option {
+    text-align: center;
 }
 
 @media screen and (max-width: 765px) {
@@ -1237,5 +1333,10 @@ p.topuser-age {
         max-width: 40%;
         margin-top: 0;
         margin-bottom: 10%;
+    }
+    .popup__close__register {
+        position: absolute;
+        right: 60px;
+        top: 20px;
     }
 }
